--- a/TestNG/test-output/old/Default suite/classes.html
+++ b/TestNG/test-output/old/Default suite/classes.html
@@ -11,18 +11,39 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Demo</td>
+<td>Demo1</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Demo</td>
+<td>Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeclass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>prerequisitebeforemethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>prerequisiteaftermethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterclass</td>
+<td>&nbsp;</td></tr>
 </table>
