--- a/TestNG/test-output/index.html
+++ b/TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Loan_project">
-                    <span>C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
+                    <span>C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Loan_project">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="APIRest">APIRest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Demo">Demo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Demo1">Demo1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -112,7 +122,17 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebLoginhome">WebLoginhome</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebSigninhome">WebSigninhome</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebSignouthome">WebSignouthome</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -150,6 +170,49 @@
           <div class="suite-Loan_project-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">test.login</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="APIRest">
+                  </a> <!-- APIRest -->
+                  <span class="method-name">APIRest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="MobileLogin">
+                  </a> <!-- MobileLogin -->
+                  <span class="method-name">MobileLogin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WebLoginhome">
+                  </a> <!-- WebLoginhome -->
+                  <span class="method-name">WebLoginhome</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WebSigninhome">
+                  </a> <!-- WebSigninhome -->
+                  <span class="method-name">WebSigninhome</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WebSignouthome">
+                  </a> <!-- WebSignouthome -->
+                  <span class="method-name">WebSignouthome</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Loan_project-class-passed -->
+          <div class="suite-Loan_project-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">test.basics</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -160,26 +223,11 @@
                   <span class="method-name">Demo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Loan_project-class-passed -->
-          <div class="suite-Loan_project-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">test.login</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MobileLogin">
-                  </a> <!-- MobileLogin -->
-                  <span class="method-name">MobileLogin</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="WebSigninhome">
-                  </a> <!-- WebSigninhome -->
-                  <span class="method-name">WebSigninhome</span>
+                  <a name="Demo1">
+                  </a> <!-- Demo1 -->
+                  <span class="method-name">Demo1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,25 +235,23 @@
         </div> <!-- panel Loan_project -->
         <div panel-name="test-xml-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
+            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Loan project&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Regression&quot;&gt;
-    &lt;groups&gt;
-      &lt;run&gt;
-        &lt;include name=&quot;Smoke&quot;/&gt;
-      &lt;/run&gt;
-    &lt;/groups&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;personal loan&quot;&gt;
+    &lt;packages&gt;
+      &lt;package name=&quot;test&quot;/&gt;
+    &lt;/packages&gt;
     &lt;classes&gt;
       &lt;class name=&quot;test.basics&quot;/&gt;
       &lt;class name=&quot;test.basics2&quot;/&gt;
       &lt;class name=&quot;test.login&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Regression --&gt;
+  &lt;/test&gt; &lt;!-- personal loan --&gt;
 &lt;/suite&gt; &lt;!-- Loan project --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -217,7 +263,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Regression (3 classes)</span>
+                <span class="test-name">personal loan (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -263,28 +309,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Demo')
+data.setCell(0, 1, 'Demo1')
 data.setCell(0, 2, 'test.basics')
-data.setCell(0, 3, 12);
+data.setCell(0, 3, 10);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'MobileLogin')
-data.setCell(1, 2, 'test.login')
-data.setCell(1, 3, 2);
+data.setCell(1, 1, 'Demo')
+data.setCell(1, 2, 'test.basics')
+data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'WebSigninhome')
+data.setCell(2, 1, 'APIRest')
 data.setCell(2, 2, 'test.login')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 3);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'day1')
-data.setCell(3, 2, 'test.basics2')
-data.setCell(3, 3, 1);
+data.setCell(3, 1, 'WebLoginhome')
+data.setCell(3, 2, 'test.login')
+data.setCell(3, 3, 2);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'day1')
+data.setCell(4, 2, 'test.basics2')
+data.setCell(4, 3, 2);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'MobileLogin')
+data.setCell(5, 2, 'test.login')
+data.setCell(5, 3, 2);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'WebSignouthome')
+data.setCell(6, 2, 'test.login')
+data.setCell(6, 3, 2);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'WebSigninhome')
+data.setCell(7, 2, 'test.login')
+data.setCell(7, 3, 1);
 window.suiteTableData['Loan_project']= { tableData: data, tableDiv: 'times-div-Loan_project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 ms</span>
+              <span class="suite-total-time">Total running time: 30 ms</span>
               <div id="times-div-Loan_project">
               </div> <!-- times-div-Loan_project -->
             </div> <!-- times-div -->
@@ -299,31 +361,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">test.basics2</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">day</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">test.basics</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">Demo1</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">test.login</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">APIRest</span>
-                <br/>
-                <span class="ignored-method-name">WebLoginhome</span>
-                <br/>
-                <span class="ignored-method-name">WebSignouthome</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -335,29 +379,104 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">prerequisitebeforesuite</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">prerequisite</span>
+                <span class="method-start">26 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">Webprerequisite</span>
+                <span class="method-start">27 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">beforeclass</span>
+                <span class="method-start">37 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="configuration-method before">
+                <span class="method-name">prerequisitebeforemethod</span>
+                <span class="method-start">70 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Demo</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">70 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">prerequisiteaftermethod</span>
+                <span class="method-start">90 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">prerequisitebeforemethod</span>
+                <span class="method-start">91 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Demo1</span>
+                <span class="method-start">92 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">prerequisiteaftermethod</span>
+                <span class="method-start">103 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">afterclass</span>
+                <span class="method-start">103 ms</span>
+              </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">test.basics2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">day1</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-start">105 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">MobileLogin</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-start">110 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">WebLoginhome</span>
+                <span class="method-start">114 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">WebSignouthome</span>
+                <span class="method-start">117 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">WebSigninhome</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-start">122 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">APIRest</span>
+                <span class="method-start">126 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">postrequisite</span>
+                <span class="method-start">132 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
+              <div class="configuration-suite after">
+                <span class="method-name">prerequisiteaftersuite</span>
+                <span class="method-start">175 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
