--- a/TestNG/test-output/old/Loan project/classes.html
+++ b/TestNG/test-output/old/Loan project/classes.html
@@ -22,14 +22,30 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeclass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>prerequisitebeforemethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>prerequisiteaftermethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterclass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>test.login</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -47,13 +63,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>APIRest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>MobileLogin</td>
 <td>Smoke </td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>APIRest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>WebLoginhome</td>
