--- a/TestNG/test-output/old/Loan project/groups.html
+++ b/TestNG/test-output/old/Loan project/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>login.WebSigninhome()[pri:0, instance:test.login@be2bc2]<br/>login.MobileLogin()[pri:0, instance:test.login@be2bc2]<br/>basics.Demo()[pri:0, instance:test.basics@16905e]<br/>basics2.day1()[pri:0, instance:test.basics2@e2cbe0]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>login.WebSigninhome()[pri:0, instance:test.login@1604f19]<br/>login.MobileLogin()[pri:0, instance:test.login@1604f19]<br/>basics.Demo()[pri:0, instance:test.basics@23a2f9]<br/>basics2.day1()[pri:0, instance:test.basics2@c0edeb]<br/></td></tr>
 </table>
