--- a/TestNG/test-output/old/Loan project/toc.html
+++ b/TestNG/test-output/old/Loan project/toc.html
@@ -10,10 +10,10 @@
 <tr valign='top'>
 <td>1 test</td>
 <td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>4 methods:<br/>
+<td>8 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (5)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>1 group</a></td>
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Regression (4/0/0)</td><td valign='top' align='right'>
-  <a href='Regression.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>personal loan (8/0/0)</td><td valign='top' align='right'>
+  <a href='personal loan.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
