--- a/TestNG/test-output/old/Default suite/methods-not-run.html
+++ b/TestNG/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test.login.WebSigninhome</td></tr>
+<tr><td>test.login.MobileLogin</td></tr>
+<tr><td>test.login.APIRest</td></tr>
+<tr><td>test.login.WebLoginhome</td></tr>
+<tr><td>test.login.WebSignouthome</td></tr>
 </table>
