--- a/TestNG/test-output/old/Default suite/classes.html
+++ b/TestNG/test-output/old/Default suite/classes.html
@@ -4,46 +4,47 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.basics</td>
+<td>test.login</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Demo1</td>
+<td>WebSignouthome</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Demo</td>
+<td>WebSigninhome</td>
 <td>Smoke </td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>APIRest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MobileLogin</td>
+<td>Smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Website</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>WebLoginhome</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeclass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>prerequisitebeforemethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>prerequisiteaftermethod</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterclass</td>
-<td>&nbsp;</td></tr>
 </table>
