--- a/TestNG/test-output/old/Default suite/methods.html
+++ b/TestNG/test-output/old/Default suite/methods.html
@@ -1,24 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@1c7cbad]">&gt;&gt;prerequisite</td> 
+<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>0</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@8a9f61]">&gt;&gt;prerequisitebeforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>8</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@8a9f61]">&gt;&gt;Webprerequisite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@1c7cbad]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@1c7cbad]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@1c7cbad]">Demo</td> 
-  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@1c7cbad]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@1c7cbad]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@1c7cbad]">Demo1</td> 
-  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@1c7cbad]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@1c7cbad]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/08/15 17:24:17</td>   <td>60</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@1c7cbad]">&lt;&lt;postrequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>80</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@8a9f61]">&lt;&lt;prerequisiteaftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
 </table>
