--- a/TestNG/test-output/old/Loan project/methods-alphabetical.html
+++ b/TestNG/test-output/old/Loan project/methods-alphabetical.html
@@ -1,42 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@1604f19]">APIRest</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@23a2f9]">Demo</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@23a2f9]">Demo1</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@1604f19]">MobileLogin</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1604f19]">WebLoginhome</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@1604f19]">WebSigninhome</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@1604f19]">WebSignouthome</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-99</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1604f19]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-89</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="96f0f5">  <td>18/08/15 18:34:14</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@c0edeb]">day1</td> 
-  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;postrequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-99</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>49</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@1604f19]">&lt;&lt;prerequisiteaftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 18:34:14</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 18:34:14</td>   <td>-118</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@1604f19]">&gt;&gt;prerequisitebeforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24958880</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@1fdc050]">APIRest</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@feb3fa]">Demo</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@feb3fa]">Demo1</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@1fdc050]">MobileLogin</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@be2bc2]">WebLoginhome</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1fdc050]">WebLoginhome</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@1fdc050]">WebSigninhome</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@1fdc050]">WebSignouthome</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-178</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@be2bc2]">&gt;&gt;Webprerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-13</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1fdc050]">&gt;&gt;Webprerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>18/08/15 21:12:58</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.Website(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@93dd95]">Website</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-89</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-170</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/15 21:12:58</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@17fd0e6]">day1</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/15 21:12:58</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2(java.lang.String)[pri:0, instance:test.basics2@17fd0e6]">day2</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-70</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;postrequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-178</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>19</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@1fdc050]">&lt;&lt;prerequisiteaftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>-154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>-186</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@1fdc050]">&gt;&gt;prerequisitebeforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
 </table>
