--- a/TestNG/test-output/old/Loan project/methods-not-run.html
+++ b/TestNG/test-output/old/Loan project/methods-not-run.html
@@ -1,3 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test.login.WebSigninhome</td></tr>
+<tr><td>test.login.MobileLogin</td></tr>
+<tr><td>test.login.APIRest</td></tr>
+<tr><td>test.login.WebSignouthome</td></tr>
 <tr><td>test.basics2.day</td></tr>
 </table>
