--- a/TestNG/test-output/old/Loan project/methods.html
+++ b/TestNG/test-output/old/Loan project/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.Website(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">Website</td> 
-  <td>main@9865817</td>   <td></td> </tr>
-<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
-  <td>main@9865817</td>   <td></td> </tr>
-<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
-  <td>main@9865817</td>   <td></td> </tr>
-<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
-  <td>main@9865817</td>   <td></td> </tr>
+<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.WebsiteCarLoan(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">WebsiteCarLoan</td> 
+  <td>main@6794838</td>   <td></td> </tr>
+<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
+  <td>main@6794838</td>   <td></td> </tr>
+<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
+  <td>main@6794838</td>   <td></td> </tr>
+<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
+  <td>main@6794838</td>   <td></td> </tr>
+<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users1()[pri:0, instance:test.parameters@1efea79]">users1</td> 
+  <td>main@6794838</td>   <td></td> </tr>
 </table>
