--- a/TestNG/test-output/old/Loan project/methods-alphabetical.html
+++ b/TestNG/test-output/old/Loan project/methods-alphabetical.html
@@ -1,14 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.WebsiteCarLoan(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">WebsiteCarLoan</td> 
-  <td>main@6794838</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
-  <td>main@6794838</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
-  <td>main@6794838</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1efea79]">users</td> 
-  <td>main@6794838</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>18/08/16 14:38:25</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users1()[pri:0, instance:test.parameters@1efea79]">users1</td> 
-  <td>main@6794838</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@4ed9f0]">APIRest</td> 
+  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@1604f19]">Demo</td> 
+  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@1604f19]">Demo1</td> 
+  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@4ed9f0]">MobileLogin</td> 
+  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@4ed9f0]">WebLoginhome</td> 
+  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@193948d]">WebLoginhome</td> 
+  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@4ed9f0]">WebSigninhome</td> 
+  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@4ed9f0]">WebSignouthome</td> 
+  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-124</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@4ed9f0]">&gt;&gt;Webprerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@18528345</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-119</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@193948d]">&gt;&gt;Webprerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.WebsiteCarLoan(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@ebc39e]">WebsiteCarLoan</td> 
+  <td>TestNG-tests-6@33525353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.WebsiteCarLoan(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1baeedf]">WebsiteCarLoan</td> 
+  <td>TestNG-tests-4@3015828</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@1604f19]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@1604f19]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>18/08/16 14:56:55</td>   <td>-97</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@1e88b3c]">day1</td> 
+  <td>TestNG-tests-2@26449336</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>18/08/16 14:56:55</td>   <td>-84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2(java.lang.String)[pri:0, instance:test.basics2@1e88b3c]">day2</td> 
+  <td>TestNG-tests-2@26449336</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-4</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@1604f19]">&lt;&lt;postrequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-123</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@1604f19]">&gt;&gt;prerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@1604f19]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@1604f19]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>43</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@4ed9f0]">&lt;&lt;prerequisiteaftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@11287177</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@1604f19]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/16 14:56:55</td>   <td>-74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@1604f19]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@12244353</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/16 14:56:55</td>   <td>-146</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@4ed9f0]">&gt;&gt;prerequisitebeforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@11287177</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@ebc39e]">users</td> 
+  <td>TestNG-tests-6@33525353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@ebc39e]">users</td> 
+  <td>TestNG-tests-6@33525353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@ebc39e]">users</td> 
+  <td>TestNG-tests-6@33525353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1baeedf]">users</td> 
+  <td>TestNG-tests-4@3015828</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1baeedf]">users</td> 
+  <td>TestNG-tests-4@3015828</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@1baeedf]">users</td> 
+  <td>TestNG-tests-4@3015828</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users1()[pri:0, instance:test.parameters@ebc39e]">users1</td> 
+  <td>TestNG-tests-6@33525353</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>18/08/16 14:56:55</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users1()[pri:0, instance:test.parameters@1baeedf]">users1</td> 
+  <td>TestNG-tests-4@3015828</td>   <td></td> </tr>
 </table>
