--- a/TestNG/test-output/old/Loan project/toc.html
+++ b/TestNG/test-output/old/Loan project/toc.html
@@ -8,22 +8,62 @@
 <h3><p align="center">Results for<br/><em>Loan project</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>3 methods:<br/>
+<td>6 tests</td>
+<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
+<td>16 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (15)</a></td>
 </tr>
 <tr>
-<td><a target='mainFrame' href='groups.html'>0 group</a></td>
+<td><a target='mainFrame' href='groups.html'>1 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Car loan (4/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'> loan (4/1/0)</td><td valign='top' align='right'>
+  <a href=' loan.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Regression (0/0/0)</td><td valign='top' align='right'>
+  <a href='Regression.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>para loan (4/1/0)</td><td valign='top' align='right'>
+  <a href='para loan.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Car loan (2/0/0)</td><td valign='top' align='right'>
   <a href='Car loan.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Home loan (5/0/0)</td><td valign='top' align='right'>
+  <a href='Home loan.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>personal loan (3/0/0)</td><td valign='top' align='right'>
+  <a href='personal loan.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
