--- a/TestNG/test-output/emailable-report.html
+++ b/TestNG/test-output/emailable-report.html
@@ -8,17 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Loan project</th></tr>
-<tr><td><a href="#t0">Car loan</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">1</td><td class="num">206</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">10,783</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Loan project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Car loan &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.parameters</td><td><a href="#m0">users1</a></td><td rowspan="1">1534441105409</td><td rowspan="1">104</td></tr><tr><th colspan="4">Car loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">test.parameters</td><td><a href="#m1">WebsiteCarLoan</a></td><td rowspan="1">1534441105367</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m2">users</a></td><td rowspan="3">1534441105395</td><td rowspan="3">1</td></tr><tr class="passedeven"><td><a href="#m3">users</a></td></tr><tr class="passedeven"><td><a href="#m4">users</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testingfiles.dependency</td><td><a href="#m0">OpeningBrowser</a></td><td rowspan="1">1534444717437</td><td rowspan="1">10739</td></tr><tr class="passedeven"><td><a href="#m1">software</a></td><td rowspan="1">1534444717424</td><td rowspan="1">8</td></tr></tbody>
 </table>
-<h2>Car loan</h2><h3 id="m0">test.parameters#users1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at test.parameters.users1(parameters.java:46)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.parameters#WebsiteCarLoan</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>paraloan.com</td><td>12345</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.parameters#users</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>first username</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.parameters#users</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>second username</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.parameters#users</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>third username</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testingfiles.dependency#OpeningBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testingfiles.dependency#software</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
