--- a/TestNG/test-output/old/Default suite/methods.html
+++ b/TestNG/test-output/old/Default suite/methods.html
@@ -1,2 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="e2809c">  <td>18/08/16 15:38:25</td>   <td>0</td> <td title="&gt;&gt;Testbase.Login()[pri:0, instance:testingfiles.dependency@43fe0e]">&gt;&gt;Login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13152239</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>18/08/16 15:38:37</td>   <td>11723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testbase.software()[pri:0, instance:testingfiles.dependency@43fe0e]">software</td> 
+  <td>main@13152239</td>   <td></td> </tr>
+<tr bgcolor="fe8984">  <td>18/08/16 15:38:37</td>   <td>11736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dependency.OpeningBrowser()[pri:0, instance:testingfiles.dependency@43fe0e]">OpeningBrowser</td> 
+  <td>main@13152239</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>18/08/16 15:38:48</td>   <td>22508</td> <td title="&lt;&lt;Testbase.uninstallsoftware()[pri:0, instance:testingfiles.dependency@43fe0e]">&lt;&lt;uninstallsoftware</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13152239</td>   <td></td> </tr>
 </table>
