--- a/TestNG/test-output/old/Loan project/groups.html
+++ b/TestNG/test-output/old/Loan project/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>login.WebSigninhome()[pri:0, instance:test.login@4ed9f0]<br/>login.MobileLogin()[pri:0, instance:test.login@4ed9f0]<br/>basics.Demo()[pri:0, instance:test.basics@1604f19]<br/>basics2.day1()[pri:0, instance:test.basics2@1e88b3c]<br/></td></tr>
+</table>
